--- a/.github/workflows/ci-test-ginkgo.yml
+++ b/.github/workflows/ci-test-ginkgo.yml
@@ -35,7 +35,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [oracle-vm-16cpu-64gb-x86-64]
-        runtime: ["containerd","crio"]
+        runtime: ["containerd", "crio"]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -43,8 +43,8 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version-file: 'KubeArmor/go.mod'
-      
+          go-version-file: "KubeArmor/go.mod"
+
       - name: Check what paths were updated
         uses: dorny/paths-filter@v2
         id: filter
@@ -74,7 +74,7 @@ jobs:
         working-directory: pkg/KubeArmorOperator
         run: |
           make docker-build
-      
+
       - name: Build KubeArmorController
         if: steps.filter.outputs.controller == 'true'
         run: make -C pkg/KubeArmorController/ docker-build TAG=latest
@@ -84,7 +84,7 @@ jobs:
         if: steps.filter.outputs.multiubuntu == 'true'
         run: docker build -t kubearmor/ubuntu-w-utils:latest .
 
-      - name: deploy pre existing pod 
+      - name: deploy pre existing pod
         run: |
           kubectl apply -f ./tests/k8s_env/ksp/pre-run-pod.yaml
           sleep 60
@@ -118,7 +118,7 @@ jobs:
 
               docker save kubearmor/kubearmor-test:latest | sudo podman load
               sudo podman tag docker.io/kubearmor/kubearmor-test:latest kubearmor/kubearmor-test:latest
-      
+
               docker save kubearmor/kubearmor-operator:latest | sudo podman load
               sudo podman tag docker.io/kubearmor/kubearmor-operator:latest kubearmor/kubearmor-operator:latest
 
@@ -141,7 +141,7 @@ jobs:
 
           docker system prune -a -f 
           docker buildx prune -a -f
-          helm upgrade --install kubearmor-operator ./deployments/helm/KubeArmorOperator -n kubearmor --create-namespace --set kubearmorOperator.image.tag=latest  --set kubearmorOperator.annotateExisting=true
+          helm upgrade --install kubearmor-operator ./deployments/helm/KubeArmorOperator -n kubearmor --create-namespace --set global.kubearmorOperator.image.tag=latest  --set kubearmorOperator.annotateExisting=true
           kubectl wait --for=condition=ready --timeout=5m -n kubearmor pod -l kubearmor-app=kubearmor-operator
           kubectl get pods -A
           if [[ ${{ steps.filter.outputs.controller }} == 'true' ]]; then
@@ -153,7 +153,7 @@ jobs:
           fi
 
           kubectl wait -n kubearmor --timeout=5m --for=jsonpath='{.status.phase}'=Running kubearmorconfigs/kubearmorconfig-test
-          
+
           while [ ! "$(kubectl wait --timeout=5s --for=condition=ready pod -l kubearmor-app,kubearmor-app!=kubearmor-snitch -n kubearmor >/dev/null 2>&1; echo $?)" -eq 0 ]; do
             kubectl rollout status --timeout=5m deployment -n kubearmor -l kubearmor-app,kubearmor-app!=kubearmor-controller -n kubearmor
             kubectl rollout status --timeout=5m daemonset -l kubearmor-app=kubearmor -n kubearmor
@@ -228,7 +228,7 @@ jobs:
           done
           ls -l
         working-directory: KubeArmor
-        
+
       - name: Get karmor sysdump
         if: ${{ failure() }}
         run: |
@@ -254,7 +254,7 @@ jobs:
           else
             echo "Coverage file not found, skipping coverage report."
           fi
-        
+
         working-directory: KubeArmor
         env:
           GOPATH: /home/runner/go
