--- a/deployments/helm/KubeArmorOperator/templates/deployment.yaml
+++ b/deployments/helm/KubeArmorOperator/templates/deployment.yaml
@@ -26,8 +26,12 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}      
       {{- if .Values.kubearmorOperator.image.imagePullSecrets }}
-      imagePullSecrets: 
-        {{- toYaml .Values.kubearmorOperator.image.imagePullSecrets | nindent 8 }}
+      imagePullSecrets:
+      {{- toYaml .Values.kubearmorOperator.image.imagePullSecrets | nindent 8 }}
+
+      {{- else if .Values.global.registry.secretName }}
+      imagePullSecrets:
+        - name: {{ .Values.global.registry.secretName }}
       {{- end }}
       {{- if .Values.kubearmorOperator.tolerations }}
       tolerations: 
@@ -48,8 +52,8 @@ spec:
         - name: KUBEARMOR_OCI_HOOKS
           value: "yes"
         {{- end }}
-        {{- if .Values.imagePinning -}}
-          {{- include "pinnedImages" .Values.oci_meta | trim | nindent 8 }}
+        {{- if .Values.global.imagePinning -}}
+          {{- include "pinnedImages" .Values.global.kubearmor | trim | nindent 8 }}
         {{- end }}
         {{- if .Values.kubearmorOperator.env -}}
           {{- .Values.kubearmorOperator.env | toYaml | nindent 8 }}
@@ -61,6 +65,9 @@ spec:
         - --annotateResource={{ .Values.kubearmorOperator.annotateResource }}
         {{- if .Values.kubearmorOperator.image.imagePullSecrets }}
         - --image-pull-secrets={{ .Values.kubearmorOperator.image.imagePullSecrets | toJson }}
+
+        {{- else if .Values.global.registry.secretName }}
+        - --image-pull-secrets={{ list (dict "name" .Values.global.registry.secretName) | toJson }}
         {{- end }}
         {{- if .Values.kubearmorOperator.args -}}
           {{- toYaml .Values.kubearmorOperator.args | trim | nindent 8 }}
