fix ginkgo tests
Signed-off-by: Aryan Bakliwal <aryanbakliwal12345@gmail.com>

--- a/tests/k8s_env/blockposture/res/ksp-wordpress-allow-file.yaml
+++ b/tests/k8s_env/blockposture/res/ksp-wordpress-allow-file.yaml
@@ -16,11 +16,16 @@ spec:
     - dir: /proc/
       recursive: true
     - dir: /lib/x86_64-linux-gnu/
+    - dir: /lib/aarch64-linux-gnu/
     - dir: /bin/
     - dir: /pts/
       recursive: true
     - dir: /dev/
       recursive: true
+    - dir: /
+      recursive: true
+      fromSource:
+      - path: /runc
     matchPaths:
     - path: /root/.bashrc
     - path: /root/.bash_history
