--- a/tests/k8s_env/ksp/multiubuntu/ksp-group-2-allow-file-path-from-source-path.yaml
+++ b/tests/k8s_env/ksp/multiubuntu/ksp-group-2-allow-file-path-from-source-path.yaml
@@ -29,6 +29,10 @@ spec:
         recursive: true
       - dir: /lib/x86_64-linux-gnu/
       - dir: /bin/
+      - dir: /
+        recursive: true
+        fromSource:
+        - path: /runc
   action:
     Allow
 
