--- a/tests/k8s_env/ksp/multiubuntu/ksp-ubuntu-3-allow-proc-path-owner.yaml
+++ b/tests/k8s_env/ksp/multiubuntu/ksp-ubuntu-3-allow-proc-path-owner.yaml
@@ -40,7 +40,11 @@ spec:
     - dir: /bin/
       recursive: true  
     - dir: /dev/
-      recursive: true  
+      recursive: true
+    - dir: /
+      recursive: true
+      fromSource:
+      - path: /runc
   action:
     Allow
 
