--- a/tests/k8s_env/ksp/multiubuntu/ksp-ubuntu-4-allow-file-path-readonly.yaml
+++ b/tests/k8s_env/ksp/multiubuntu/ksp-ubuntu-4-allow-file-path-readonly.yaml
@@ -39,7 +39,11 @@ spec:
     - dir: /sys/kernel/
       recursive: true 
     - dir: /dev/pts/
-      recursive: true 
+      recursive: true
+    - dir: /
+      recursive: true
+      fromSource:
+      - path: /runc 
   action:
     Allow
 
