--- a/tests/k8s_env/blockposture/res/wordpress-mysql-deployment.yaml
+++ b/tests/k8s_env/blockposture/res/wordpress-mysql-deployment.yaml
@@ -92,7 +92,11 @@ spec:
     spec:
       containers:
       - name: mysql
-        image: mysql:5.6
+        image: mysql:8.0
+        args:
+          - "--default-authentication-plugin=mysql_native_password"
+          - "--character-set-server=utf8mb4"
+          - "--collation-server=utf8mb4_unicode_ci"
         env:
         - name: MYSQL_ROOT_PASSWORD
           value: root-password
