feat: Add loong64 support
Signed-off-by: Guoqi Chen <chenguoqi@loongson.cn>

--- a/KubeArmor/BPF/Makefile.vars
+++ b/KubeArmor/BPF/Makefile.vars
@@ -44,6 +44,10 @@ else ifeq ($(UNAME_M),aarch64)
    ARCH = arm64
    LINUX_ARCH = arm64
    GO_ARCH = arm64
+else ifeq ($(UNAME_M),loongarch64)
+   ARCH = loongarch64
+   LINUX_ARCH = loongarch64
+   GO_ARCH = loong64
 endif
 
 CL  = clang
