trigger CI for docker file updates
Signed-off-by: Aryan-sharma11 <aryan1126.sharma@gmail.com>

--- a/.github/workflows/ci-test-ginkgo.yml
+++ b/.github/workflows/ci-test-ginkgo.yml
@@ -21,6 +21,7 @@ on:
       - "examples/multiubuntu/build/**"
       - "pkg/KubeArmorOperator/**"
       - "deployments/helm/**"
+      - "Dockerfile*"
 
 # Declare default permissions as read only.
 permissions: read-all
