updated the workflow to use the right source image
Signed-off-by: ADISH <adishjain1107@gmail.com>

--- a/.github/workflows/ci-dhi-image-mirror.yml
+++ b/.github/workflows/ci-dhi-image-mirror.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Mirror DHI image to Docker Hub
         run: |
-          regctl image copy dhi.io/alpine-base:3.22-dhi adishjain1107/alpine-base:3.22-dhi --digest-tags
+          regctl image copy dhi.io/alpine-base:3.22 adishjain1107/alpine-base:3.22-dhi --digest-tags
 
   validate-dockerfile:
     name: Validate Dockerfile Build and Run
