updated the workflow to use sub-modules
Signed-off-by: ADISH <adishjain1107@gmail.com>

--- a/.github/workflows/ci-dhi-image-mirror.yml
+++ b/.github/workflows/ci-dhi-image-mirror.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
       - name: Install regctl
         run: |
