--- a/.github/workflows/ci-dhi-image-mirror.yml
+++ b/.github/workflows/ci-dhi-image-mirror.yml
@@ -52,6 +52,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - name: Ensure submodules are initialized
+        run: git submodule update --init --recursive
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
