--- a/KubeArmor/BPF/Makefile.vars
+++ b/KubeArmor/BPF/Makefile.vars
@@ -72,24 +72,24 @@ else
 	 	 	-include $(KRNDIR)/include/linux/kconfig.h
 endif
 
-# rhel build version
-RHEL_BUILD := $(shell echo "$(UNAME_R)" | sed -nE 's/.*-([0-9]+)\..*\.el[0-9]+(_[0-9]+)?\..*/\1/p')
+# rhel9 build version
+RHEL9_BUILD := $(shell echo "$(UNAME_R)" | sed -nE 's/.*-([0-9]+)\..*\.el9(_[0-9]+)?\..*/\1/p')
 
-# rhel build version -ge 400
-RHEL_BUILD_GTE_400 := 0
+# rhel9 build version -ge 400
+RHEL9_BUILD_GTE_400 := 0
 
-ifneq ($(strip $(RHEL_BUILD)),)
-$(info RHEL compatible kernel, build: $(RHEL_BUILD))
-    RHEL_BUILD_GTE_400 := $(shell [ $(RHEL_BUILD) -ge 400 ] && echo 1 || echo 0)
-    ifeq ($(RHEL_BUILD_GTE_400),1)
-        $(info RHEL build is greater or equal to 400)
+ifneq ($(strip $(RHEL9_BUILD)),)
+$(info RHEL9 compatible kernel, build: $(RHEL9_BUILD))
+    RHEL9_BUILD_GTE_400 := $(shell [ $(RHEL9_BUILD) -ge 400 ] && echo 1 || echo 0)
+    ifeq ($(RHEL9_BUILD_GTE_400),1)
+        $(info RHEL9 build is greater or equal to 400)
     else
-        $(info RHEL build is less than 400)
+        $(info RHEL9 build is less than 400)
     endif
 
-    INC_F += -DRHEL_BUILD_GTE_400
+    INC_F += -DRHEL9_BUILD_GTE_400
 else
-    $(info Non-RHEL kernel, skipping RHEL-specific logic)
+    $(info Non-RHEL9 kernel, skipping RHEL9-specific logic)
 endif
 
 KF = $(INC_F) -I$(LIBBPF)/src \
