--- a/pkg/KubeArmorController/config/webhook/manifests.yaml
+++ b/pkg/KubeArmorController/config/webhook/manifests.yaml
@@ -4,24 +4,90 @@ kind: MutatingWebhookConfiguration
 metadata:
   name: mutating-webhook-configuration
 webhooks:
-- admissionReviewVersions:
-  - v1
-  clientConfig:
-    service:
-      name: webhook-service
-      namespace: system
-      path: /mutate-pods
-  failurePolicy: Ignore
-  name: annotation.kubearmor.com
-  rules:
-  - apiGroups:
-    - ""
-    apiVersions:
-    - v1
-    operations:
-    - CREATE
-    - UPDATE
-    resources:
-    - pods
-    - pods/binding
-  sideEffects: NoneOnDryRun
+  - admissionReviewVersions:
+      - v1
+    clientConfig:
+      service:
+        name: webhook-service
+        namespace: system
+        path: /mutate-pods
+    failurePolicy: Ignore
+    name: annotation.kubearmor.com
+    rules:
+      - apiGroups:
+          - ""
+        apiVersions:
+          - v1
+        operations:
+          - CREATE
+          - UPDATE
+        resources:
+          - pods
+          - pods/binding
+    sideEffects: NoneOnDryRun
+---
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingWebhookConfiguration
+metadata:
+  name: validating-webhook-configuration
+webhooks:
+  - admissionReviewVersions:
+      - v1
+    clientConfig:
+      service:
+        name: webhook-service
+        namespace: system
+        path: /validate-security-kubearmor-com-v1-kubearmorpolicy
+    failurePolicy: Warn
+    name: vkubearmorpolicy.kubearmor.com
+    rules:
+      - apiGroups:
+          - security.kubearmor.com
+        apiVersions:
+          - v1
+        operations:
+          - CREATE
+          - UPDATE
+        resources:
+          - kubearmorpolicies
+    sideEffects: None
+  - admissionReviewVersions:
+      - v1
+    clientConfig:
+      service:
+        name: webhook-service
+        namespace: system
+        path: /validate-security-kubearmor-com-v1-kubearmorclusterpolicy
+    failurePolicy: Warn
+    name: vkubearmorclusterpolicy.kubearmor.com
+    rules:
+      - apiGroups:
+          - security.kubearmor.com
+        apiVersions:
+          - v1
+        operations:
+          - CREATE
+          - UPDATE
+        resources:
+          - kubearmorclusterpolicies
+    sideEffects: None
+  - admissionReviewVersions:
+      - v1
+    clientConfig:
+      service:
+        name: webhook-service
+        namespace: system
+        path: /validate-security-kubearmor-com-v1-kubearmorhostpolicy
+    failurePolicy: Warn
+    name: vkubearmorhostpolicy.kubearmor.com
+    rules:
+      - apiGroups:
+          - security.kubearmor.com
+        apiVersions:
+          - v1
+        operations:
+          - CREATE
+          - UPDATE
+        resources:
+          - kubearmorhostpolicies
+    sideEffects: None
