--- a/deployments/helm/KubeArmor/templates/deployment.yaml
+++ b/deployments/helm/KubeArmor/templates/deployment.yaml
@@ -20,17 +20,19 @@ spec:
     spec:
       {{- if .Values.kubearmorRelay.image.imagePullSecrets }}
       imagePullSecrets:
-      {{ toYaml .Values.kubearmorRelay.image.imagePullSecrets | indent 6 }}
+    {{ toYaml .Values.kubearmorRelay.image.imagePullSecrets | indent 4 }}
       {{- end }}
       {{- if .Values.kubearmorRelay.tolerations }}
       tolerations:
-      {{ toYaml .Values.kubearmorRelay.tolerations | indent 6 }}
+    {{ toYaml .Values.kubearmorRelay.tolerations | indent 4 }}
       {{- end }}
       containers:
       - args:
-        {{printf "- -tlsEnabled=%t" .Values.tls.enabled}}
-        {{printf "- -tlsCertPath=%s" .Values.kubearmorRelay.tls.tlsCertPath}}
-        {{printf "- -tlsCertProvider=%s" .Values.kubearmorRelay.tls.tlsCertProvider}}
+        - {{ printf "--tlsEnabled=%t" .Values.tls.enabled | quote }}
+        {{- if .Values.tls.enabled }}
+        - {{ printf "--tlsCertPath=%s" .Values.kubearmorRelay.tls.tlsCertPath | quote }}
+        - {{ printf "--tlsCertProvider=%s" .Values.kubearmorRelay.tls.tlsCertProvider | quote }}
+        {{- end }}
         image: {{printf "%s:%s" .Values.kubearmorRelay.image.repository .Values.kubearmorRelay.image.tag}}
         imagePullPolicy: {{ .Values.kubearmorRelay.imagePullPolicy }}
         name: kubearmor-relay-server
@@ -81,6 +83,14 @@ spec:
       labels:
         kubearmor-app: {{ .Values.kubearmorController.name }}
     spec:
+      {{- if .Values.kubearmorController.image.imagePullSecrets }}
+      imagePullSecrets:
+    {{ toYaml .Values.kubearmorController.image.imagePullSecrets | indent 4 }}
+      {{- end }}
+      {{- if .Values.kubearmorController.tolerations }}
+      tolerations:
+    {{ toYaml .Values.kubearmorController.tolerations | indent 4 }}
+      {{- end }}
       containers:
       - args:
         - --annotateExisting=false
@@ -88,14 +98,6 @@ spec:
         - /manager
         image: {{printf "%s:%s" .Values.kubearmorController.image.repository .Values.kubearmorController.image.tag}}
         imagePullPolicy: {{ .Values.kubearmorController.imagePullPolicy }}
-      {{- if .Values.kubearmorController.image.imagePullSecrets }}
-        imagePullSecrets:
-      {{ toYaml .Values.kubearmorController.image.imagePullSecrets | indent 8 }}
-      {{- end }}
-      {{- if .Values.kubearmorController.tolerations }}
-      tolerations:
-      {{ toYaml .Values.kubearmorController.tolerations | indent 6 }}
-      {{- end }}
         livenessProbe:
           httpGet:
             path: /healthz
