fix ci tests using wrong helm value for operator
Signed-off-by: Aryan Bakliwal <aryanbakliwal12345@gmail.com>

--- a/.github/workflows/ci-network-tests.yml
+++ b/.github/workflows/ci-network-tests.yml
@@ -137,7 +137,7 @@ jobs:
 
           docker system prune -a -f 
           docker buildx prune -a -f
-          helm upgrade --install kubearmor-operator ./deployments/helm/KubeArmorOperator -n kubearmor --create-namespace --set global.kubearmorOperator.image.tag=latest  --set kubearmorOperator.annotateExisting=true
+          helm upgrade --install kubearmor-operator ./deployments/helm/KubeArmorOperator -n kubearmor --create-namespace --set kubearmorOperator.image.tag=latest  --set kubearmorOperator.annotateExisting=true
           kubectl wait --for=condition=ready --timeout=5m -n kubearmor pod -l kubearmor-app=kubearmor-operator
           kubectl get pods -A
           if [[ ${{ steps.filter.outputs.controller }} == 'true' ]]; then
