feat: Add Network Policy Enforcer
Signed-off-by: Aryan Bakliwal <aryanbakliwal12345@gmail.com>

--- a/KubeArmor/Makefile
+++ b/KubeArmor/Makefile
@@ -49,6 +49,7 @@ run: build
 	cd $(CRDDIR); kubectl apply -f KubeArmorPolicy.yaml
 	cd $(CRDDIR); kubectl apply -f KubeArmorClusterPolicy.yaml
 	cd $(CRDDIR); kubectl apply -f KubeArmorHostPolicy.yaml
+	cd $(CRDDIR); kubectl apply -f KubeArmorNetworkPolicy.yaml
 	cd $(CURDIR); sudo rm -f /tmp/kubearmor.log
 	cd $(CURDIR)/BPF; make clean
 	cd $(CURDIR)/BPF; make
