--- a/deployments/helm/KubeArmorOperator/templates/clusterrole-rbac.yaml
+++ b/deployments/helm/KubeArmorOperator/templates/clusterrole-rbac.yaml
@@ -114,6 +114,7 @@ rules:
   - kubearmorpolicies
   - kubearmorclusterpolicies
   - kubearmorhostpolicies
+  - kubearmornetworkpolicies
   verbs:
   - get
   - list
@@ -183,6 +184,7 @@ rules:
   - kubearmorpolicies
   - kubearmorclusterpolicies
   - kubearmorhostpolicies
+  - kubearmornetworkpolicies
   verbs:
   - create
   - delete
@@ -197,6 +199,7 @@ rules:
   - kubearmorpolicies/status
   - kubearmorclusterpolicies/status
   - kubearmorhostpolicies/status
+  - kubearmornetworkpolicies/status
   verbs:
   - get
   - patch
