--- a/deployments/operator/operator.yaml
+++ b/deployments/operator/operator.yaml
@@ -1646,6 +1646,7 @@ rules:
   - kubearmorpolicies
   - kubearmorclusterpolicies
   - kubearmorhostpolicies
+  - kubearmornetworkpolicies
   verbs:
   - create
   - delete
@@ -1660,6 +1661,7 @@ rules:
   - kubearmorpolicies/status
   - kubearmorclusterpolicies/status
   - kubearmorhostpolicies/status
+  - kubearmornetworkpolicies/status
   verbs:
   - get
   - patch
@@ -1715,6 +1717,7 @@ rules:
   - kubearmorpolicies
   - kubearmorclusterpolicies
   - kubearmorhostpolicies
+  - kubearmornetworkpolicies
   verbs:
   - get
   - list
