--- a/deployments/helm/KubeArmor/templates/RBAC/roles.yaml
+++ b/deployments/helm/KubeArmor/templates/RBAC/roles.yaml
@@ -48,6 +48,7 @@ rules:
   - kubearmorpolicies
   - kubearmorclusterpolicies
   - kubearmorhostpolicies
+  - kubearmornetworkpolicies
   verbs:
   - get
   - list
@@ -114,6 +115,7 @@ rules:
   - kubearmorpolicies
   - kubearmorclusterpolicies
   - kubearmorhostpolicies
+  - kubearmornetworkpolicies
   verbs:
   - create
   - delete
@@ -128,6 +130,7 @@ rules:
   - kubearmorpolicies/status
   - kubearmorclusterpolicies/status
   - kubearmorhostpolicies/status
+  - kubearmornetworkpolicies/status
   verbs:
   - get
   - patch
