fix: USB logs missing timestamp and updated time
Signed-off-by: Aryan Bakliwal <aryanbakliwal12345@gmail.com>

--- a/KubeArmor/Makefile
+++ b/KubeArmor/Makefile
@@ -63,7 +63,7 @@ run-container: build
 run-host-only: build
 	cd $(CRDDIR); kubectl apply -f KubeArmorHostPolicy.yaml
 	cd $(CURDIR); sudo rm -f /tmp/kubearmor.log
-	cd $(CURDIR); sudo -E ./kubearmor -logPath=/tmp/kubearmor.log -enableKubeArmorPolicy=false -enableKubeArmorHostPolicy=true -hostVisibility=process,file,network,capabilities
+	cd $(CURDIR); sudo -E ./kubearmor -logPath=/tmp/kubearmor.log -enableKubeArmorPolicy=false -enableKubeArmorHostPolicy=true -hostVisibility=process,file,network,capabilities -k8s=false
 
 .PHONY: test
 test:
